feat(memory): enhance memory list with visual relevance badges from semantic search

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -91,7 +91,7 @@
                 type="text"
                 id="memorySearchInput"
                 class="search-input"
-                placeholder="搜索記憶..."
+                placeholder="🔍 智慧搜索記憶（例如：科技股、風險投資）"
               >
               <button id="refreshMemoriesBtn" class="btn-action" title="重新載入">
                 🔄 重新載入
